Acabe la introduccion

--- a/SerieFourier.tex
+++ b/SerieFourier.tex
@@ -58,9 +58,13 @@
 \indent En diciembre de 1807, Joseph Fourier presentó ante la Academia de Ciencias de París su \textit{Théorie de la propagation de la chaleur dans le solides}, en ella proponía una ecuación diferencial para describir la difusión del calor en un cuerpo sólido y propuso una solución mediante la representación de una función como series de senos y cosenos.\\
 \indent Este trabajo fue ampliamente criticado en su momento, especialmente por Biot, Poisson, Laplace y Lagrange, quién se oponía a la idea de que una función cualquiera pudiese ser representada mediante una serie trigonométrica.\\
 \indent Fourier veía a las matemáticas como una herramienta para explicar el mundo, y con su análisis pretendía únicamente plantear un fenómeno físico y explicar su solución, y no llegar a un rigor matemático en su desarrollo.
-\subsection{El rectificador de onda }
+\subsection{El rectificador de onda completa}
 \indent Tanto la generación como la transmisión y conversión de energía eléctrica se realizan de una manera más simple y eficiente en corriente alterna. Asimismo, debido a la resistencia de los conductores que forman una línea de transmisión, es conveniente que la corriente sea lo menor posible, lo cual requiere aumentar la tensión. Los transformadores de corriente alterna permiten llevar a cabo esta conversión con alto rendimiento.\\
 \indent Sin embargo, la gran mayoría de los aparatos eléctricos y electrónicos precisan de un flujo de tensión continua, este flujo es suministrado por un sistema llamado fuente de alimentación. El componente más importante de una fuente de alimentación es el rectificador de onda, cuya función es convertir la corriente alterna en una corriente unidireccional, que idealmente, no variará con el tiempo.\\
-\indent Existen dos tipos principales de rectificadores, el rectificador de media onda y el de onda completa. Este ultimo presenta la ventaja de \\
+\indent Existen dos tipos principales de rectificadores, el rectificador de media onda y el de onda completa.\\
+\indent El circuito rectificador de media onda tiene como ventaja su sencillez, pero no permite utilizar toda la energía disponible, ya que los
+semiciclos negativos son desaprovechados. Este inconveniente se resuelven con los rectificadores de onda completa.\\
+\indent Como se ha señalado anteriormente, los rectificadores ideales producen formas de onda unidireccionales pero de ninguna manera constantes, como sería deseable para su uso como fuente de alimentación. Dado que el problema es equivalente al de eliminar las componentes frecuenciales diferentes de la continua, la solución consiste en utilizar un filtro pasabajos cuya frecuencia de corte esté suficientemente por debajo de la
+frecuencia de la onda rectificada, dicho filtro puede implementarse mediante capacitores o inductores, aquí analizaremos el segundo caso.
 
 \end{document}
