@Penserbjorne , se añadieron las secciones correspondientes.

--- a/SerieFourier.tex
+++ b/SerieFourier.tex
@@ -104,9 +104,12 @@ para calcular los coeficientes $a_n$ apareció por primera vez en un artículo e
 \indent Lagrange, joven aún, entró en escena en 1759. Estudió las vibraciones de un hilo sin masa al que se coloca una cantidad finita de masas de igual magnitud equidistribuidas y vio cómo variaban las vibraciones al tender el
 número de masas a infinito; tras largas manipulaciones analíticas decidió que la solución de Euler era correcta.\\
 
+\section{Resultados}
 
+\section{Conclusiones}
 
+\section{Bibliografia}
 
-
+\section{Referencias}
 
 \end{document}
